--- a/index.html
+++ b/index.html
@@ -4,10 +4,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- STYLE -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Dropbox</title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <!-- Menu -->
+        <nav>
+        </nav>
+        <!-- /Menu -->
+
+        <!-- Jumbotron -->
+        <div class="jumbotron">
+        </div>
+        <!-- /Jumbotron -->
+    </header>
+    <!-- /Header -->
+
+    <!-- Main -->
+    <main>
+        <div class="container">
+            <!-- Columns -->
+            <div class="columns">
+            </div>
+            <!-- /Columns -->
+
+            <!-- Enterprise -->
+            <div class="enterprise">
+            </div>
+            <!-- /Enterprise -->
+
+            <!-- Partner -->
+            <div class="partner">
+            </div>
+            <!-- /Partner -->
+
+            <!-- Operations table -->
+            <div class="operations">
+            </div>
+            <!-- /Operations table -->
+
+            <!-- Find out more -->
+            <div class="more">
+            </div>
+            <!-- /Find out more -->
+        </div>
+
+        <!-- Members -->
+        <section class="members">
+        </section>
+        <!-- /Members -->
+
+        <!-- Try it -->
+        <div class="try_it">
+        </div>
+        <!-- /Try it -->
+
+        <!-- FAQ -->
+        <div class="container faq">
+        </div>
+        <!-- /FAQ -->
+    </main>
+    <!-- /Main -->
+
+    <footer>
+        <!-- Footer list -->
+        <div class="footer_list">
+        </div>
+        <!-- /Footer list -->
+
+        <!-- Language -->
+        <div class="language">
+        </div>
+        <!-- /Language -->
+    </footer>
 </body>
 </html>
