add: nav and style nav with hover

--- a/index.html
+++ b/index.html
@@ -15,7 +15,59 @@
     <!-- Header -->
     <header>
         <!-- Menu -->
-        <nav>
+        <nav class="clearfix">
+            <div class="left">
+                <ul>
+                    <li>
+                        <a href="">
+                            <img src="img/logo-small.png" alt="Logo Dropbox">
+                            </img>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="border_bottom" href="">
+                            Perché Dropbox?
+                        </a>
+                    </li>
+                    <li>
+                        <a class="border_bottom" href="">
+                            Funzioni
+                        </a>
+                    </li>
+                    <li>
+                        <a class="border_bottom" href="">
+                            Piani e prezzi
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="right">
+                <ul>
+                    <li>
+                        <a class="border_bottom" href="">
+                            Supporto
+                        </a>
+                    </li>
+                    <li>
+                        <a class="border_bottom" href="">
+                            Contatta l'ufficio vendite
+                        </a>
+                    </li>
+                    <li>
+                        <a class="border_bottom" href="">
+                            Accedi
+                        </a>
+                    </li>
+                    <li class="button">
+                        <a href="">
+                            Inizia
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
         </nav>
         <!-- /Menu -->
 
