add: jumbotron (da modificare)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- STYLE -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- STYLE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Dropbox</title>
@@ -72,7 +75,34 @@
         <!-- /Menu -->
 
         <!-- Jumbotron -->
-        <div class="jumbotron">
+        <div class="jumbotron clearfix">
+            <div class="jumbo">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+
+                <div class="jumbo_container">
+                    <div class="jumbo_text left">
+                        <div>
+                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.<br>Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                        </div>
+
+                        <div class="text_left left">
+                            <a href="">
+                                Inizia la tua prova gratuita
+                            </a>
+        
+                            <div>
+                                Annulla in qualsiasi momento
+                            </div>
+        
+                            <div>
+                                <i class="fas fa-arrow-down"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <img class="right" src="img/jumbo.png" alt="">
+                </div>
+            </div>
         </div>
         <!-- /Jumbotron -->
     </header>
