--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                             Accedi
                         </a>
                     </li>
-                    <li class="button">
-                        <a href="">
+                    <li">
+                        <a class="button" href="">
                             Inizia
                         </a>
                     </li>
@@ -81,21 +81,21 @@
 
                 <div class="jumbo_container">
                     <div class="jumbo_text left">
-                        <div>
+                        <div class="mb_2">
                             Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.<br>Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                         </div>
 
                         <div class="text_left left">
-                            <a href="">
+                            <a class="button" href="">
                                 Inizia la tua prova gratuita
                             </a>
         
-                            <div>
+                            <div class="mt_1 mb_3">
                                 Annulla in qualsiasi momento
                             </div>
         
                             <div>
-                                <i class="fas fa-arrow-down"></i>
+                                <a id="arrow_down" href=""><i class="fas fa-arrow-down"></i></a>
                             </div>
                         </div>
                     </div>
