--- a/index.html
+++ b/index.html
@@ -672,7 +672,18 @@
             <!-- /Operations table -->
 
             <!-- Find out more -->
-            <div class="more">
+            <div class="more mt_8">
+
+                <div class="more_text">
+                    <h2>
+                        Più di 500.000 team<br>utilizzano Dropbox Business
+                    </h2>
+    
+                    <div class="mt_1half">
+                        <a href="">Scopri di più sui nostri clienti</a>    
+                    </div>
+                </div>
+
             </div>
             <!-- /Find out more -->
         </div>
