add: griglia "Members"

--- a/index.html
+++ b/index.html
@@ -679,18 +679,50 @@
                         <a href="">Scopri di più sui nostri clienti</a>    
                     </div>
                 </div>
-
             </div>
             <!-- /Find out more -->
         </div>
 
 
+
         <!-- Members -->
         <div class="members_container">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos esse veritatis, adipisci qui commodi harum aut quidem ea vel consequatur recusandae aspernatur mollitia, iusto explicabo quas repudiandae repellat ad fugiat.
 
+            <div class="squares clearfix">
+
+                <div class="sq_col left">
+                    <div class="clearfix">
+                        <div class="square left">1</div>
+                        <div class="square left">2</div>
+                    </div>
+                    <div>
+                        <div class="square left">3</div>
+                        <div class="square left">4</div>
+                    </div>
+                </div>
+
+                <p class="sq_col_center left">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum in ab possimus ipsum libero, tenetur placeat veritatis, quibusdam repellat odio hic veniam! Velit, dolorum! Magni dolorum mollitia aliquid nobis odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod odit accusamus veniam nostrum excepturi laborum molestiae consectetur earum? Voluptates delectus iure odio unde, velit labore est! Quidem molestiae explicabo repellendus.
+                </p>
+
+                <div class="sq_col left">
+                    <div class="clearfix">
+                        <div class="square left">5</div>
+                        <div class="square left">6</div>
+                    </div>
+                    <div>
+                        <div class="square left">7</div>
+                        <div class="square left">8</div>
+                    </div>
+                </div>
+
+            </div>
+        
         </div>
         <!-- /Members -->
+
+
+
 
         <div class="container">
 
