add: first "logo" + "hover border"

--- a/index.html
+++ b/index.html
@@ -696,7 +696,11 @@
                         <div class="square left">2</div>
                     </div>
                     <div>
-                        <div class="square left">3</div>
+                        <div class="square left">
+                            <a href="">
+                                <img src="img/university_of_florida.svg" alt="">
+                            </a>
+                        </div>
                         <div class="square left">4</div>
                     </div>
                 </div>
