"Members": fixed: hover & add: squares colors

--- a/index.html
+++ b/index.html
@@ -692,16 +692,28 @@
 
                 <div class="sq_col left">
                     <div class="clearfix">
-                        <div class="square left">1</div>
-                        <div class="square left">2</div>
+                        <div class="square left designit">
+                            <a href="">
+                                <img src="img/designit.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="square left asu">
+                            <a href="">
+                                <img src="img/arizona_state_university.svg" alt="">
+                            </a>
+                        </div>
                     </div>
                     <div>
-                        <div class="square left">
+                        <div class="square left u_florida">
                             <a href="">
                                 <img src="img/university_of_florida.svg" alt="">
                             </a>
                         </div>
-                        <div class="square left">4</div>
+                        <div class="square left topps">
+                            <a href="">
+                                <img src="img/topps.svg" alt="">
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -711,12 +723,28 @@
 
                 <div class="sq_col left">
                     <div class="clearfix">
-                        <div class="square left">5</div>
-                        <div class="square left">6</div>
+                        <div class="square left wbr">
+                            <a href="">
+                                <img src="img/world_bicycle_relief.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="square left hearst">
+                            <a href="">
+                                <img src="img/hearst_corp.svg" alt="">
+                            </a>
+                        </div>
                     </div>
                     <div>
-                        <div class="square left">7</div>
-                        <div class="square left">8</div>
+                        <div class="square left lp">
+                            <a href="">
+                                <img src="img/lonely_planet.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="square left clear_channel">
+                            <a href="">
+                                <img src="img/clear_channel.svg" alt="">
+                            </a>
+                        </div>
                     </div>
                 </div>
 
