add: "Members" text column center with overflow

--- a/index.html
+++ b/index.html
@@ -692,12 +692,12 @@
 
                 <div class="sq_col left">
                     <div class="clearfix">
-                        <div class="square left designit">
+                        <div class="square left designit" contenteditable="true">
                             <a href="">
                                 <img src="img/designit.svg" alt="">
                             </a>
                         </div>
-                        <div class="square left asu">
+                        <div class="square left asu" contenteditable="true">
                             <a href="">
                                 <img src="img/arizona_state_university.svg" alt="">
                             </a>
@@ -717,9 +717,13 @@
                     </div>
                 </div>
 
-                <p class="sq_col_center left">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum in ab possimus ipsum libero, tenetur placeat veritatis, quibusdam repellat odio hic veniam! Velit, dolorum! Magni dolorum mollitia aliquid nobis odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod odit accusamus veniam nostrum excepturi laborum molestiae consectetur earum? Voluptates delectus iure odio unde, velit labore est! Quidem molestiae explicabo repellendus.
-                </p>
+                <div class="sq_col_center left">
+                    <img src="img/designit.svg" alt="">
+
+                    <p><span>"I mem</span>bri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna é facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna é facile quanto Dropbox e Dropbox Paper."</p>
+                
+                    <div class="mt_2">Morten Thomsen, Global IT Lead</div>
+                </div>
 
                 <div class="sq_col left">
                     <div class="clearfix">
