--- a/index.html
+++ b/index.html
@@ -757,19 +757,21 @@
         </div>
         <!-- /Members -->
 
-
-
+        <!-- TRY IT -->
+        <div class="try_it">
+            <div class="try_container container clearfix pt_6 pb_6"> 
+                <h2 class="try_col_left left">
+                    Porta Dropbox Business<br>nella tua azienda.
+                </h2>
+                
+                <a class="try_col_right left" href="">Inizia la tua prova gratuita</a>
+            </div>
+        </div>
+        <!-- TRY IT -->
 
         <div class="container">
-
-            <!-- TRY IT -->
-            <div class="try_it">
-            </div>
-            <!-- TRY IT -->
-
             <!-- FAQ -->
-            <div class="faq">
-            </div>
+
             <!-- /FAQ -->
         </div>
     </main>
