--- a/index.html
+++ b/index.html
@@ -771,7 +771,39 @@
 
         <div class="container">
             <!-- FAQ -->
+            <div class="faq pt_6 pb_6">
 
+                <h4 class="pb_2">Domande frequenti</h4>
+
+                <div class="question clearfix">
+                    <p>
+                        Qual'é la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </p>
+                    <i class="fas fa-chevron-down right"></i>
+                </div>
+
+                <div class="question clearfix">
+                    <p>
+                        Qual'é la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </p>
+                    <i class="fas fa-chevron-down right"></i>
+                </div>
+
+                <div class="question clearfix">
+                    <p>
+                        Qual'é la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </p>
+                    <i class="fas fa-chevron-down right"></i>
+                </div>
+
+                <div class="question clearfix">
+                    <p>
+                        Qual'é la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </p>
+                    <i class="fas fa-chevron-down right"></i>
+                </div>
+
+            </div>
             <!-- /FAQ -->
         </div>
     </main>
