add: footer with language input select

--- a/index.html
+++ b/index.html
@@ -812,11 +812,174 @@
     <footer>
         <!-- Footer list -->
         <div class="footer_list">
+            <div class="footer_container clearfix pt_5 pb_5">
+
+                <ul class="left">
+
+                    <h5>Dropbox</h5>
+
+                    <li>
+                        <a href="">
+                            Applicazione desktop
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Perché Dropbox
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Piani
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Sicurezza
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Funzioni
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="left">
+
+                    <h5>Prodotti</h5>
+
+                    <li>
+                        <a href="">
+                            Applicazione desktop
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Perché Dropbox
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Piani
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Sicurezza
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Funzioni
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="left">
+
+                    <h5>Azienda</h5>
+
+                    <li>
+                        <a href="">
+                            Applicazione desktop
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Perché Dropbox
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Piani
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Sicurezza
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Funzioni
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="left">
+
+                    <h5>Supporto</h5>
+
+                    <li>
+                        <a href="">
+                            Applicazione desktop
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Perché Dropbox
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Piani
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Sicurezza
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Funzioni
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="left">
+
+                    <h5>Community</h5>
+
+                    <li>
+                        <a href="">
+                            Applicazione desktop
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Perché Dropbox
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Piani
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <!-- /Footer list -->
 
         <!-- Language -->
         <div class="language">
+
+            <div class="language_container">
+                <div class="language content pt_3 pb_3">
+                    <label for="language">
+                        <i class="fas fa-globe-americas"></i>
+                    </label>
+
+                    <select name="language" id="language">
+                        <option value="italiano">Italiano</option>
+                        <option value="english">English</option>
+                        <option value="chinese">中国人</option>
+                        <option value="espanol">Español</option>
+                    </select>
+                </div>
+
+            </div>
         </div>
         <!-- /Language -->
     </footer>
